--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 9</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <title>Homework 10</title>
+    <link rel="stylesheet" href="./css/common.css">
   </head>
   <body>
-    <ul>
-      <li><a href="./01-color-switcher.html">Color switcher</a></li>
-      <li><a href="./02-timer.html">Countdown timer</a></li>
-      <li><a href="./03-promises.html">Promise generator</a></li>
-    </ul>
+    <select class="breed-select"></select>
+    <p class="loader"></p>
+    <p class="error"></p>
+    <div class="cat-info">
+  
+    </div>
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
