--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,7 @@
     <select class="breed-select"></select>
     <p class="loader"></p>
     <p class="error"></p>
-    <div class="cat-info">
-  
-    </div>
+    <div class="cat-info"></div>
 
     <script src="index.js" type="module"></script>
   </body>
